hid images on mobile until i can fix it

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -219,3 +219,9 @@ table p {
     width: 8vw;
   }
 }
+
+@media (pointer: coarse) {
+  .card img {
+    display: none;
+  }
+}
